@startuml
' Domain: binders  |  mode: compact
' Edge legend: --> ORM relationship()   ..> FK-only (no relationship)
hide empty members
skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam ArrowColor #555555
skinparam ClassBorderColor #888888
skinparam ClassBackgroundColor #FAFAFA

enum BinderStatus {
  in_office
  ready_for_pickup
  returned
}

class Binder <<binders>> {
  +id : int <<PK>>
  +binder_number : str
  +period_start : date
  +period_end : date?
  +status : BinderStatus
  +returned_at : date?
  +pickup_person_name : str?
  +is_full : bool
  +notes : text?
}

class BinderIntake <<binder_intakes>> {
  +id : int <<PK>>
  +received_at : date
  +notes : text?
}

enum MaterialType {
  vat
  income_tax
  annual_report
  salary
  bookkeeping
  national_insurance
  capital_declaration
  pension_and_insurance
  corporate_docs
  tax_assessment
  other
}

class BinderIntakeMaterial <<binder_intake_materials>> {
  +id : int <<PK>>
  +material_type : MaterialType
  +description : text?
}

class BinderStatusLog <<binder_status_logs>> {
  +id : int <<PK>>
  +old_status : str
  +new_status : str
  +changed_at : datetime
  +notes : text?
}

Binder --> "0..*" BinderIntake : intakes
BinderIntake --> "0..1" Binder : binder
' FK-only links (no ORM relationship declared):
Binder ..> Client : client_id
Binder ..> User : created_by
Binder ..> User : deleted_by
BinderIntake ..> User : received_by
BinderIntakeMaterial ..> BinderIntake : intake_id
BinderIntakeMaterial ..> Business : business_id
BinderIntakeMaterial ..> AnnualReport : annual_report_id
BinderStatusLog ..> Binder : binder_id
BinderStatusLog ..> User : changed_by

@enduml